fix overflow

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -14,7 +14,6 @@ $font-family-sans-serif: Inter;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  overflow-x: hidden !important;
 }
 
 html {
@@ -25,7 +24,6 @@ body {
   color: #000;
   font-size: 1.6rem;
   font-weight: 400;
-  overflow-x: hidden !important;
 }
 .text-yellow {
   color: #ffc107 !important;
